# hannac

./: CMakeLists.txt  README.md
examples/: basic.hanna  test.hanna
hannac_lib/: CMakeLists.txt
hannac_lib/include/: AST.hpp  Codegen.hpp  Executor.hpp  FileParser.hpp  GlobalSettings.hpp  JIT.hpp  Lexer.hpp  TokenParser.hpp
hannac_lib/src/: AST.cpp  main.cpp
hannac_tests/: CMakeLists.txt  FileParser_tests.cpp
hannac_tests/Executor/: Executor_tests.cpp
hannac_tests/Executor/data/: both.hanna  expressionAsParameter.hanna  functionCall.hanna  int.hanna  methodAsParam.hanna  negative.hanna  parameterOrder.hanna  real.hanna
hannac_tests/FileParser/: FileParser_tests.cpp
hannac_tests/Lexer/: Lexer_tests.cpp
hannac_tests/Lexer/data/: comment.hanna  method.hanna  numbers.hanna  real_numbers.hanna
hannac_tests/TokenParser/: TokenParser_tests.cpp
hannac_tests/TokenParser/data/: missingReturn.hanna  noMain.hanna
licences/LLVM/: disclaimer.txt
src/: main.cpp
